grafana/01-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana
spec:
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
    nodePort: 30002
  type: NodePort
  selector:
    app: grafana
